个人账户信息页面修改

--- a/kankan/pages/main/products/product_login.html
+++ b/kankan/pages/main/products/product_login.html
@@ -162,7 +162,7 @@
 						<li style="display: block;" class="mui-table-view-cell">
 							<a id="comdity_takepic" style="color: #9C9C9C" disabled="true"></a>
 						</li>
-						<li  style="display: block;" class="mui-table-view-cell">
+						<li style="display: block;" class="mui-table-view-cell">
 							<a id="tackpicture" onclick="getImage()" style="color: #007aff"></a>
 						</li>
 					</ul>
@@ -201,10 +201,9 @@
 	var testarr=[];
 	var catearrs=[{data:[]}];
 	var positions='0';
-	//getprice
 	var price_max = 0;
 	var price_min = 0;
-	var charge_rate = 0; //rate
+	var charge_rate = 0;
 	var mobileSelect4;
 	var stautsSelect;
 	var stautesposition='0';
