与api改修有关，暂时没法同步到本番并且以经注释的改修

--- a/kankan/pages/main/products/product_login.html
+++ b/kankan/pages/main/products/product_login.html
@@ -279,8 +279,8 @@
 	       $('.window-masking').removeAttr("style");
 	       $("body").unbind("touchmove");
 	    },false);
-		var params = {};
-		Repository.Commodity.getPrice(params, {
+		var params5 = {};
+		Repository.Commodity.getPrice(params5, {
 			ok: function(data) {
 				console.log("success");
 				showPrice(data);
