--- a/kankan/pages/transaction/seller_account.html
+++ b/kankan/pages/transaction/seller_account.html
@@ -17,7 +17,7 @@
 			<a class="mui-back mui-icon mui-icon-left-nav mui-pull-left"></a>
 			<h1 class="mui-center mui-title lang" data-locale="designated_account"></h1>
 		</header>
-		<div class="mui-content" style="font-size: 15px;">
+		<div class="mui-content" style="font-size: 15px;min-height: 615px;">
 			<form action="" method="post" name="" id="" style="height:500px;">
 				<!--bank-->
 				<div class="seller_bank">
@@ -28,9 +28,9 @@
 				<!--account type-->
 				<div class="tradeFees" style="margin-top: 2em;">
 					<ul class="mui-table-view ka_prologbox">
-						<li class="mui-table-view-cell" style="display: -webkit-box;">
-						    <div class="mui-col-xs-6 mui-pull-left lang" data-locale="account_type"></div>
-						    <div id="accountResults" class="lang" data-locale="selecttype" style="margin-right: 0.5em;"></div>
+						<li class="mui-table-view-cell">
+						    <div class="mui-pull-left lang" data-locale="account_type"></div>
+						    <div id="accountResults" class="lang mui-pull-right" data-locale="selecttype" style="margin-right: 0.5em;width: 59%;"></div>
 					        <input type="hidden" name="accountSelect" id="accountSelect" value="" />
 						</li>
 						<li class="mui-table-view-cell" style="display: -webkit-box;">
@@ -94,16 +94,16 @@
 	    var branchData = [{data:[]}];
 	    var accountData = [{data:[{
 						id: '0',
-						value: "兴业银行"
+						value: "普通預金"
 					}, {
 						id: '1',
-						value: "交通银行"
+						value: "当座預金"
 					}, {
 						id: '2',
-						value: "招商银行"
+						value: "貯蓄預金"
 					}, {
 						id: '3',
-						value: "建设银行"
+						value: "その他"
 					}
 				]
 	    	}];
