修改票号17420和17396

--- a/kankan/pages/main/products/detail.html
+++ b/kankan/pages/main/products/detail.html
@@ -40,6 +40,11 @@
 				overflow: hidden;
 				/*line-height: 320px;*/
 			}
+			
+			.aboutDonate {
+				text-align:left;
+				text-indent:2em;
+			}
 		</style>
 	</head>
 
@@ -391,7 +396,14 @@
 			}
             $('.open-window-title').on('click',function(){
 				setTitle = TextMessage.aboutDonate;
-				setContents = '<div style="clear:both;padding-top: 1em;"><div style="text-align:left;text-indent:2em">'+TextMessage.donate1+'</div><div style="text-align:left;text-indent:2em;">'+TextMessage.donate2+'</div><div style="text-align:left;text-indent:2em;">'+TextMessage.donate3+'</div></div>';
+				setContents = '<div style="clear:both;">'+
+				      '<div class="aboutDonate">'+TextMessage.donate1+'</div>'+
+				      '<div class="aboutDonate">'+TextMessage.donate2+'</div>'+
+				      '<div class="aboutDonate">'+TextMessage.donate3+'</div>'+
+				      '<div class="aboutDonate">'+TextMessage.donate4+'</div>'+
+				      '<div class="aboutDonate">'+TextMessage.donate5+'</div>'+
+				      '<div class="aboutDonate">'+TextMessage.donate6+'</div>'+
+				      '<div class="aboutDonate">'+TextMessage.donate7+'</div>';
 				setButton = TextMessage.confirmBtnYes;
 				$(this).openWindow(setTitle,setContents,[setButton]);
 				$("body").bind("touchmove", function(e) {
