--- a/kankan/pages/main/products/requestlist.html
+++ b/kankan/pages/main/products/requestlist.html
@@ -87,7 +87,7 @@
 						var status = TextMessage.requestStop;
 					}else{
 						//var status="取引の中止";
-						var status = TextMessage.transStop;
+						var status = TextMessage.transactionStop;
 					}
 					if(trans[0].comm_img==""){
 						var comm_img ="../../../images/nopic.jpg";
