--- a/kankan/pages/transaction/payment.html
+++ b/kankan/pages/transaction/payment.html
@@ -56,19 +56,30 @@
 		    	<div style="width: 100%;">
 		    		<div style="height: 2em;">
 		    			<div class="mui-pull-left" style="display: flex;align-items: center;">
-		    				<input id="balance" type="radio" name="method" style="zoom: 1.8;"/>
+		    				<input id="balance" type="radio" value="0" name="method" style="zoom: 1.8;"/>
 		    			    <span style="margin-left: 0.5em;" class="lang" data-locale="balance_payment"></span>
 		    			</div>
 		    			<div class="mui-pull-right" style="margin-right: 2em;">
 		    				<span>&yen;<span id="user_balance"></span></span>
 		    			</div>
 		    		</div>
-		    		<div style="display: flex;align-items: center;">
-		    			<input id="otherway" type="radio" name="method" style="zoom: 1.8;"/>
-		    			<span style="margin-left: 0.5em;" class="lang" data-locale="otherway_payment"></span>
+		    		<div style="height: 2em;">
+		    			<div style="display: flex;align-items: center;">
+		    				<input id="credit_card" type="radio" value="1" name="method" style="zoom: 1.8;"/>
+		    				<span style="margin-left: 0.5em;" class="lang"  data-locale="credit_card"></span>
+		    			</div>
+		    		</div>
+		    		<div style="height: 2em;">
+		    			<div style="display: flex;align-items: center;">
+		    				<input id="bank_card" type="radio" name="method" value="2" style="zoom: 1.8;"/>
+		    				<span style="margin-left: 0.5em;" class="lang" data-locale="bank_card"></span>
+		    			</div>
 		    		</div>
 		    	</div>
 		    </div>
+		    <input type="hidden" name="transid" value="" id="transid" />
+		    <input type="hidden" name="userid" value="" id="userid" />
+		    <input type="hidden" name="price" value="" id="price"  />
 		    <button class="mui-col-xs-8 lang" data-locale="pay" onclick="pay()" style="background-color: red; color: #FFFFFF; text-align: center; position: absolute; left: 16.5%; bottom: 5em; padding: 0.3em 0;">
 		    </button>
 		</div>
@@ -97,6 +108,7 @@
 				var params = {
 					'transid': trans_id
 				};
+				$("#transid").val(trans_id);
 				Repository.Transaction.transPayshow(params, {
 					ok: function(data) {
 						console.log("success");
@@ -110,6 +122,7 @@
 			})
 			
 			function showPayInfor(results) {
+				console.dir(results);
 				var commBasicInfor = results.data;
 			    var comm_imgUrl = commBasicInfor.comm_imgs[0].url;
 			    var comm_imgWidth = commBasicInfor.comm_imgs[0].width;
@@ -122,6 +135,8 @@
 			    //显示图片的宽和高
 			    var showimgHeight = showimgWidth * proportion;
 			    var divHeight = $("#comm_image").height();
+			    $("#userid").val(results.myid);
+			    $("#price").val(commBasicInfor.price);
 			    //图片的高度大大于框的高度
 			    if (showimgHeight > divHeight) {
 			    	extraImg = 'width: 100%; margin-top:-'+(showimgHeight-divHeight)/2+'px;';
@@ -160,25 +175,38 @@
 			//付款按钮
 			var pay_way;
 			var params2;
+			var pay_url;
+			var clientip="00329";
+			var money;
+			var i="on";
+			var transid="";
+			var redirect_back_url="https://www.kankann.jp:442/bankval/Transfer/";
+			var userid="";
 			function pay() {
-				if($(":radio:checked").attr("id")=="balance") {
-					pay_way = 0;
-					params2 = {
-						'transid': trans_id,
-						'pay_way': pay_way //0表示余额  1表示银行
-			        };
-				} else {
-					pay_way = 1;
-					mui.openWindow({
-						url: 'sample_payment.html',
-						id: 'sample_payment.html',
-						extras: {
-						    "transid": trans_id,
-						    "pay_way": pay_way
-					    }
-					});
+				pay_way = $(":radio:checked").val();
+				money=$("#price").val();
+				transid=$("#transid").val();
+				userid=$("#userid").val();
+				params2 = {
+					'transid': trans_id,
+					'pay_way': pay_way //0表示余额  1表示银行
+			    };
+				if(pay_way == 0) {
+					gotopay(params2);
+				} else if ( pay_way ==1 ) {
+					pay_url = 'https://secure.telecomcredit.co.jp/inetcredit/secure/order.pl';
+					//pay_url += "?clientip="+clientip+"&money="+money+"&i=on&userid="+userid+"&option="+transid+"&redirect_back_url="+redirect_back_url;
+					pay_url += "?clientip="+clientip+"&money="+money+"&i=on&userid="+userid+"&option="+transid;
+					plus.runtime.openURL(pay_url);
+				}else if(pay_way ==2){
+					pay_url = 'https://secure.telecomcredit.co.jp/banktransfer/settle/transfer_request.pl';
+					//pay_url += "?clientip="+clientip+"&money="+money+"&i=on&sendid="+userid+"&option="+transid+"&redirect_back_url="+redirect_back_url+"&testmode=on";
+					pay_url += "?clientip="+clientip+"&money="+money+"&i=on&sendid="+userid+"&option="+transid+"&testmode=on";
+					plus.runtime.openURL(pay_url);
 				}
-				
+			}
+			
+			function gotopay(params2){
 				Repository.Transaction.transgotoPay(params2, {
 					ok: function(data) {
 						console.log("success");
