http://unit.sunseer.co.jp/issues/17449   商品详情页面，将手机切换为中文，依然显示【寄付について】

--- a/kankan/pages/main/products/product_login.html
+++ b/kankan/pages/main/products/product_login.html
@@ -137,7 +137,7 @@
 				<!--Trading interest end-->
 				<!---寄付机能-->
 				<div style="margin: 1.5em 0 3.5em 0.5em;">
-				    <h5 class="ka_proloh5 mui-pull-left">寄付について</h5>
+				    <h5 class="ka_proloh5 mui-pull-left" data-locale="commodity_benefitActivity"></h5>
 				    <div class="mui-icon mui-icon-help mui-pull-right open-window-title" style="padding-right: 2%;"></div>
 				    <!--<div class="mui-row">
 				        <div class="mui-col-sm-6"><h5 class="ka_proloh5">寄付について</h5></div>
@@ -151,7 +151,7 @@
 				<ul class="mui-table-view" style="clear: both;">
 						<li class="mui-table-view-cell" style="width: 100%;">
 							<div class="mui-navigate-right">
-								<span class="ka_proinfo lang" data-locale="" >寄付先一覧</span>
+								<span class="ka_proinfo lang" data-locale="commodity_donationList" ></span>
 								<div id='donation_result' class="mui-pull-right ka_sortname lang" data-locale="" id="">寄付しない</div>
 								<!--<div  class="ui-alert mui-pull-right ka_sortname"></div>-->
 								<input type="hidden" name="donation_id" id="donation_id" value="" />
