http://unit.sunseer.co.jp/issues/17449

--- a/kankan/pages/main/products/product_login.html
+++ b/kankan/pages/main/products/product_login.html
@@ -137,7 +137,7 @@
 				<!--Trading interest end-->
 				<!---寄付机能-->
 				<div style="margin: 1.5em 0 3.5em 0.5em;">
-				    <h5 class="ka_proloh5 mui-pull-left" data-locale="commodity_benefitActivity"></h5>
+				    <h5 class="ka_proloh5 mui-pull-left lang" data-locale="commodity_benefitActivity">て</h5>
 				    <div class="mui-icon mui-icon-help mui-pull-right open-window-title" style="padding-right: 2%;"></div>
 				    <!--<div class="mui-row">
 				        <div class="mui-col-sm-6"><h5 class="ka_proloh5">寄付について</h5></div>
