http://unit.sunseer.co.jp/issues/17452

--- a/kankan/pages/main/products/product_login.html
+++ b/kankan/pages/main/products/product_login.html
@@ -555,6 +555,7 @@
 			$("#number_price").removeAttr("disabled");
 			$("#pointbuybtn").removeClass("ka_exchangegrey");
 			$("#pointbuybtn").addClass("ka_exchangered");
+			$(".priceContent").show();
 		}
 		if(exchange=="1"){
 			$("#exchbuybtn").removeClass("ka_exchangegrey");
