发送验证码失败文言修改

--- a/kankan/pages/transaction/transaction2.html
+++ b/kankan/pages/transaction/transaction2.html
@@ -1029,7 +1029,7 @@
 							var commdinfo = data.data.commdinfo;
 							var usersinfo = data.data.usersinfo;
 							var allcount=	data.data.all_cnt[0].cnt;
-							console.log(allcount);
+							//console.log(allcount);
 							var allcomiditynum=10*page;
 							mui('#pullrefresh').pullRefresh().endPullupToRefresh(allcount <=allcomiditynum);
 							var buyer_flag = false;
