--- a/kankan/pages/transaction/payment.html
+++ b/kankan/pages/transaction/payment.html
@@ -122,7 +122,7 @@
 			})
 			
 			function showPayInfor(results) {
-				console.dir(results);
+				//console.dir(results);
 				var commBasicInfor = results.data;
 			    var comm_imgUrl = commBasicInfor.comm_imgs[0].url;
 			    var comm_imgWidth = commBasicInfor.comm_imgs[0].width;
